# endian_trait

./: .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  cargo-publish
endian_trait_derive/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE.txt  README.md
endian_trait_derive/src/: lib.rs
endian_trait_derive/tests/: complex_struct.rs  generics.rs  invalid.rs  tuple_struct.rs  zst.rs
src/: arrays.rs  lib.rs  slices.rs
tests/: complex_struct.rs  enum.rs  generics.rs  invalid.rs  nested_struct.rs  simple_struct.rs  slices.rs  tuple_struct.rs  zst.rs
