[package]
name = "endian_trait"
version = "0.1.1"
authors = [
	"myrrlyn <myrrlyn@outlook.com>",
]
license = "MIT"
description = "A trait for Endianness conversions that can be implemented on most types"
readme = "README.md"
keywords = [
	"endian",
]

[dependencies.endian_trait_derive]
path = "endian_trait_derive"
version = "0.1"
repository = "https://gitlab.com/myrrlyn/endian_trait"

[workspace]
members = [
	"endian_trait_derive",
]
