[package]
name = "endian_trait"
version = "1.0.0"
authors = [
	"myrrlyn <myrrlyn@outlook.com>",
]
edition = "2018"
license = "MIT"
description = "A trait for Endianness conversions that can be implemented on most types"
readme = "README.md"
keywords = [
	"endian",
]
repository = "https://github.com/myrrlyn/endian_trait"
exclude = [
	"Justfile",
]

[dependencies.endian_trait_derive]
path = "endian_trait_derive"
version = "1.0.0"

[features]
arrays = []

[workspace]
members = [
	"endian_trait_derive",
]

[badges.github]
repository = "myrrlyn/endian_trait"
branch = "master"

[badges.maintenance]
status = "passively-maintained"

[badges.travis-ci]
repository = "myrrlyn/endian_trait"
branch = "master"
