[package]
name = "endian_trait_derive"
version = "0.6.0"
authors = [
	"myrrlyn <myrrlyn@outlook.com>",
]
license = "MIT"
description = "A custom derive for the Endian trait"
keywords = [
	"endian",
	"custom-derive",
]
readme = "README.md"
repository = "https://gitlab.com/myrrlyn/endian_trait"
workspace = ".."
exclude = [
	"Justfile",
]

[lib]
proc-macro = true
doctest = false

[dependencies]
quote = "0.4"

[dependencies.syn]
version = "0.12"
features = [
	"derive",
	"extra-traits",
]

[badges.gitlab]
repository = "myrrlyn/endian_trait"
branch = "master"

[badges.maintenance]
status = "passively-maintained"

[badges.travis-ci]
repository = "myrrlyn/endian_trait"
branch = "master"
