[package]
name = "endian_trait_derive"
version = "1.0.0"
authors = [
	"myrrlyn <myrrlyn@outlook.com>",
]
edition = "2018"
license = "MIT"
description = "A custom derive for the Endian trait"
keywords = [
	"endian",
	"custom-derive",
]
readme = "README.md"
repository = "https://github.com/myrrlyn/endian_trait"
workspace = ".."
exclude = [
	"Justfile",
]

[lib]
proc-macro = true
doctest = false

[dependencies]
proc-macro2 = "1"
quote = "1"

[dependencies.syn]
version = "1"
features = [
	"derive",
	"extra-traits",
]

[badges.github]
repository = "myrrlyn/endian_trait"
branch = "master"

[badges.maintenance]
status = "passively-maintained"

[badges.travis-ci]
repository = "myrrlyn/endian_trait"
branch = "master"
